force-app/main/default/objects/Sample_Display_Confirm__c/Sample_Display_Confirm__c.object-meta.xml
<CustomObject>
    <label>Sample Display Confirm</label>
    <nameField>
        <displayFormat>{0000}</displayFormat>
        <label>Subtask Code</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Sample Display Confirm</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>