force-app/main/default/objects/Sample_Display_Confirm__c/fields/Add_or_Replace__c.field-meta.xml
<CustomField>
    <fullName>Add_or_Replace__c</fullName>
    <label>Add or Replace</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>New</fullName>
            </value>
            <value>
                <fullName>Replace</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>