force-app/main/default/objects/Sample_Display_Confirm__c/fields/Customer__c.field-meta.xml
<CustomField>
    <fullName>Customer__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Customer</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Sample Display Confirm</relationshipLabel>
    <relationshipName>Store_Details</relationshipName>
    <type>Lookup</type>
</CustomField>