force-app/main/default/objects/Sample_Display_Confirm__c/fields/Deadline__c.field-meta.xml
<CustomField>
    <fullName>Deadline__c</fullName>
    <formula>Sample_Display__r.Deadline__c</formula>
    <label>Deadline</label>
    <type>Date</type>
</CustomField>