force-app/main/default/objects/Sample_Display_Confirm__c/fields/Key__c.field-meta.xml
<CustomField>
    <fullName>Key__c</fullName>
    <description>Sample_Display_Code__c + &apos;-&apos; + &apos;Store__c&apos;</description>
    <label>Key</label>
    <length>255</length>
    <type>Text</type>
</CustomField>