force-app/main/default/objects/Sample_Display_Confirm__c/fields/Product_Model__c.field-meta.xml
<CustomField>
    <fullName>Product_Model__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Product Model</label>
    <lookupFilter>
        <active>false</active>
        <filterItems>
            <field>$User.Sales_Region__c</field>
            <operation>equals</operation>
            <valueField>Product__c.sales_region__c</valueField>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Product__c</referenceTo>
    <relationshipLabel>Sample Display Confirm</relationshipLabel>
    <relationshipName>Store_Details</relationshipName>
    <type>Lookup</type>
</CustomField>