force-app/main/default/objects/Sample_Display_Confirm__c/fields/Replace_Model__c.field-meta.xml
<CustomField>
    <fullName>Replace_Model__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Replaced Model</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>$User.Sales_Region__c</field>
            <operation>equals</operation>
            <valueField>Product__c.sales_region__c</valueField>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Product__c</referenceTo>
    <relationshipLabel>Sample Display Confirm (Replace Model)</relationshipLabel>
    <relationshipName>Sample_Display_Confirm</relationshipName>
    <type>Lookup</type>
</CustomField>