force-app/main/default/objects/Sample_Display_Confirm__c/fields/Sales_Region__c.field-meta.xml
<CustomField>
    <fullName>Sales_Region__c</fullName>
    <formula>TEXT(CreatedBy.Sales_Region__c)</formula>
    <label>Sales Region</label>
    <type>Text</type>
</CustomField>