force-app/main/default/objects/Sample_Display_Confirm__c/fields/Sample_Display__c.field-meta.xml
<CustomField>
    <fullName>Sample_Display__c</fullName>
    <label>Sample Display</label>
    <referenceTo>Sample_Display__c</referenceTo>
    <relationshipLabel>Sample Display Confirm</relationshipLabel>
    <relationshipName>Sample_Display_Confirm</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>