force-app/main/default/objects/Sample_Display_Confirm__c/fields/Sample_Display_Code__c.field-meta.xml
<CustomField>
    <fullName>Sample_Display_Code__c</fullName>
    <formula>Sample_Display__r.Name</formula>
    <label>Sample Display Code</label>
    <type>Text</type>
</CustomField>