force-app/main/default/objects/Sample_Display_Confirm__c/fields/Sample_Display_Customer_Confirm__c.field-meta.xml
<CustomField>
    <fullName>Sample_Display_Customer_Confirm__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Sample Display Customer Confirm</label>
    <referenceTo>Sample_Display_Customer_Confirm__c</referenceTo>
    <relationshipLabel>Sample Display Confirm</relationshipLabel>
    <relationshipName>Sample_Display_Confirm</relationshipName>
    <type>Lookup</type>
</CustomField>