force-app/main/default/objects/Sample_Display_Confirm__c/fields/Upload_File_Flag__c.field-meta.xml
<CustomField>
    <fullName>Upload_File_Flag__c</fullName>
    <defaultValue>false</defaultValue>
    <description>上传图片更新状态标志，true则不验证trigger</description>
    <label>Upload File Flag</label>
    <type>Checkbox</type>
</CustomField>